Prevent dashboard overflow on mobile

--- a/src-ui/src/app/components/dashboard/widgets/saved-view-widget/saved-view-widget.component.scss
+++ b/src-ui/src/app/components/dashboard/widgets/saved-view-widget/saved-view-widget.component.scss
@@ -1,7 +1,8 @@
 table {
   overflow-wrap: anywhere;
+  table-layout: fixed;
 }
 
 th:first-child {
-  min-width: 5rem;
+  width: 25%;
 }
